--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     }
   ],
   "require": {
+    "php": "^8.3",
     "latte/latte": "^3.1",
     "vlucas/phpdotenv": "^5.6",
     "php-di/php-di": "^7.1",
